--- a/index.html
+++ b/index.html
@@ -5,19 +5,52 @@
     <link rel="stylesheet" href="build/css/vendor.css">
     <link href="build/css/vendor.css" rel="stylesheet" type="text/css">
     <script src="build/js/vendor.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title></title>
   </head>
   <body>
     <div class="container">
-      <form id="bikeSearch">
-        <input type="text" name="make" placeholder="make" id="make">
-        <input type="text" name="model" placeholder="model" id="model">
-        <input type="number" name="year" placeholder="year" id="year">
-        <button id="searchClick" type="button">Search Bike</button>
-      </form>
-      <div>
-        <ul id="returnBike"></ul>
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-primary" id="clickGraph" type="button">Eat Pie</button>
+          <div id="stolen_bike_colors"></div>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-6">
+          <form id="bikeSearch">
+            <div class="form-group">
+              <input class="form-control" type="text" name="make" placeholder="make" id="make">
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="text" name="model" placeholder="model" id="model">
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="number" name="year" placeholder="year" id="year">
+            </div>
+            <button class="btn btn-dark btn-block" id="searchClick" type="button">Search Bike</button>
+          </form>
+        </div>
+      </div>
+      <div id="results" class="row justify-content-center mt-3">
+        <div class="col-12">
+          <table class="table table-hover">
+            <thead class="thead-inverse">
+              <tr>
+                <th>Make</th>
+                <th>Model</th>
+                <th>Year</th>
+                <th>Colors</th>
+                <th>Serial #</th>
+                <th>Date Stolen</th>
+              </tr>
+            </thead>
+            <tbody id="returnBike" >
+
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
