--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <div class="form-group">
               <input class="form-control" type="number" name="year" placeholder="year" id="year">
             </div>
+            <div class="form-group">
+              <input class="form-control" type="text" name="city" placeholder="city" id="city">
+            </div>
             <button class="btn btn-dark btn-block" id="searchClick" type="button">Search Bike</button>
+              <button class="btn btn-dark btn-block" id="craigslistClick" type="button">Search Craigslist</button>
           </form>
         </div>
       </div>
@@ -51,6 +55,11 @@
             </tbody>
           </table>
         </div>
+      </div>
+
+      <div>
+        <ul id="craigslist-results">
+        </ul>
       </div>
     </div>
   </body>
